add css file @media screen desktop mode start

--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -408,3 +408,12 @@ footer {
 footer p {
   font-weight: 8px;
 }
+
+/*  Desktop version */
+@media screen and (min-width: 760px) {
+  .star-logo {
+    width: 75px;
+    height: 75px;
+    left: 10%;
+  }
+}
