--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -411,4 +411,36 @@ footer p {
 
 /*  Desktop version */
 @media screen and (min-width: 760px) {
+  /* tool bar and nav ajustment  */
+  nav {
+    display: flex;
+    flex-direction: row;
+  }
+  .to-bar .search {
+    display: flex;
+  }
+  .welcome {
+    background-image: url("../images/main-banner.jpg"); */
+     background-repeat: no-repeat;
+    background-size: center;
+    position: relative;
+    left: 15%;
+     margin-bottom: 45%;
+    max-width:1200px;
+    width:1200px
+    height: 550px;
+    
+  }
+  .wel-p{
+    width: 700px;
+   height: 100px;
+   }
+
+   .wel-p p{
+
+   }
+   .wel-p h1{
+    
+   }
+
 }
