css desktop version adds

--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -836,9 +836,9 @@ footer p {
   /* forms  */
   .end{
     display: grid;
-    grid-template-row: 1fr 1fr ;
+    /* grid-template-row: 1fr 1fr ;
     justify-content: space-evenly;
-    flex-wrap: none;
+    flex-wrap: none; */
 
   }
   #contactus {
